--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             professionals and expand my network. Please feel free to reach out
             if you are interested in connecting or working on a project with me.
           </p>
-          <a href="my resume.pdf" id="resume">View Resume</a>
+          <a href="myATS.pdf" id="resume">View Resume</a>
         </div>
         <br>
         <br>
