--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <a href="softwaredownload.html" id="scale"
           ><button>SOFTWARE DOWNLOAD</button></a
         >
+        <a href="pdf.html" id="scale"> <button>my PDFs</button></a>
       </div>
     </div>
 
