--- a/pdf.html
+++ b/pdf.html
@@ -16,7 +16,13 @@
           width="300px"
           alt=""
       /></a>
-      <a href=" " id="mypdf">HTML</a>
+      <a href="HTML.pdf" id="mypdf"
+        ><img
+          src="https://icons.iconarchive.com/icons/cornmanthe3rd/plex/512/Other-html-5-icon.png"
+          height="200px"
+          width="200px"
+          alt=""
+      /></a>
       <a href=" " id="mypdf">CSS</a>
       <a href=" " id="mypdf">Spring</a>
       <a href=" " id="mypdf">JAVA</a>
