--- a/index.html
+++ b/index.html
@@ -25,22 +25,12 @@
         <div class="home-left">
           <h1>CHALLA SANTHOSH</h1>
           <h1 id="occupation">Full Stack Developer</h1>
-          <p id="mn">
-            I am completed my Bachelor of Technology in
-            <strong>Computer Science & Engineering</strong> at Sreenivasa
-            Institute of Technology And Management Studies(SITAMS), I am a
-            certified Web Development and have completed courses on web
-            development. I am excited to work in Tech industry.I was completed
-            Electrical and Electronics Engineering in Diploma at DR yc james yen
-            govt polytechnic collage at kuppam,but i have interest in Computer
-            Science &Engineering.In that case i was changed my branch my
-            bachelor degree into Computer Science & Engineering. I have interest
-            in computer based works like programming and photo and
-            VideoEditing.I have some experince in Photo editing and Video
-            editing. I am always eager to learn new things and challenge myself,
-            and I am looking for opportunities to collaborate with other
-            professionals and expand my network. Please feel free to reach out
-            if you are interested in connecting or working on a project with me.
+          <p style="color: black">
+            A Java Full Stack Developer is proficient in both frontend and
+            backend development using technologies like HTML, CSS, JavaScript,
+            Java, Hibernate, Spring Boot, and databases. They build complete web
+            applications from user interface to server-side logic and data
+            management.
           </p>
           <a href="myATS.pdf" id="resume">View Resume</a>
         </div>
