--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Challa Santhosh</title>
+    <title>Challa Santhosh - Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.cdnfonts.com/css/google-sans" rel="stylesheet" />
   </head>
   <body>
+    <!-- Navbar -->
     <div class="navbar">
       <div class="navbar-left">
-        <img class="logo-image" src="logo.png" alt="logo" />
+        <img class="logo-image" src="logo.png" alt="Logo" />
       </div>
       <div class="navbar-right">
         <a class="a-element" href="#home">Home</a>
@@ -20,82 +21,78 @@
       </div>
     </div>
 
+    <!-- Home / About Section -->
     <main>
-      <div class="home" id="about">
+      <section class="home" id="about">
         <div class="home-left">
-          <h1>CHALLA SANTHOSH</h1>
-          <h1 id="occupation">Full Stack Developer</h1>
-          <p style="color: black">
-            A Java Full Stack Developer is proficient in both frontend and
-            backend development using technologies like HTML, CSS, JavaScript,
-            Java, Hibernate, Spring Boot, and databases. They build complete web
-            applications from user interface to server-side logic and data
-            management.
+          <h1 class="name-title">CHALLA SANTHOSH</h1>
+          <h2 id="occupation">Full Stack Developer</h2>
+          <p>
+            I am a Java Full Stack Developer proficient in frontend and backend
+            development using HTML, CSS, JavaScript, Java, Hibernate, Spring
+            Boot, and MySQL. I build full-stack web applications with
+            user-friendly design and robust backend logic.
           </p>
-
           <a href="myATS.pdf" id="resume">View Resume</a>
         </div>
-        <br>
-        <br>
         <div class="home-right">
-          <img src="portfolio.jpg" alt="" id="main-image" />
+          <img src="portfolio.jpg" alt="Portfolio" id="main-image" />
         </div>
-      </div>
+      </section>
     </main>
-    <div class="projects" id="projects">
+
+    <!-- Projects Section -->
+    <section class="projects" id="projects">
       <div class="project">
-       <a href="projects.html" id="scale"><button>PROJECTS</button></a>
-
+        <a href="projects.html" id="scale"><button>Projects</button></a>
         <a href="certifivations.html" id="scale"
-          ><button>CERTIFICATIONS</button></a
+          ><button>Certifications</button></a
         >
-        <a href="skills.html" id="scale"><button>SKILLS</button></a>
-
-        <a href="softwaredownload.html" id="scale"
-          ><button>SOFTWARE DOWNLOAD</button></a
-        >
-        <a href="pdf.html" id="scale"> <button>my PDFs</button></a>
+        <a href="skills.html" id="scale"><button>Skills</button></a>
+        <a href="softwaredownload.html" id="scale"><button>Software</button></a>
+        <a href="pdf.html" id="scale"><button>PDFs</button></a>
       </div>
-    </div>
+    </section>
 
-    <div class="contact" id="contacts">
-      <h1 class="ser-h1">CONTACT US</h1>
+    <!-- Contact Section -->
+    <section class="contact" id="contacts">
+      <h1 class="section-title">Contact</h1>
       <div class="contact-info">
-        <p>C Santhosh</p>
-        <p>+91 8072154062</p>
-        <p>challasanthosh14@gmail.com</p>
+        <p><strong>Name:</strong> C Santhosh</p>
+        <p><strong>Phone:</strong> +91 8072154062</p>
+        <p><strong>Email:</strong> challasanthosh14@gmail.com</p>
       </div>
-    </div>
+    </section>
 
+    <!-- Footer / Social Links -->
     <footer>
       <div class="social-icons">
-        <div class="social-icon">
-          <a href="https://www.instagram.com/sunny_vlgs/?__pwa=1">
-            <img
-              src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/58/Instagram-Icon.png/1024px-Instagram-Icon.png"
-              class="social-icon-img"
-            />
-          </a>
-          <a href="https://www.youtube.com/@aypkurrallu208">
-            <img
-              src="https://www.iconpacks.net/icons/2/free-youtube-logo-icon-2431-thumb.png"
-              class="social-icon-img"
-            />
-          </a>
-          <a href="https://www.linkedin.com/in/challa-santhosh-9b450531a/">
-            <img
-              src="https://cdn-icons-png.flaticon.com/512/174/174857.png"
-              class="social-icon-img"
-            />
-          </a>
-          <a href="https://github.com/challasanthosh-14">
-            <img
-              src="https://as2.ftcdn.net/jpg/02/50/30/59/1000_F_250305943_sDC6la1N1fDl3bLgfLxOkQwItIodsdMb.jpg"
-              class="social-icon-img"
-            />
-          </a>
-        </div>
+        <a href="https://www.instagram.com/sunny_vlgs/?__pwa=1">
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/58/Instagram-Icon.png/1024px-Instagram-Icon.png"
+            class="social-icon-img"
+          />
+        </a>
+        <a href="https://www.youtube.com/@aypkurrallu208">
+          <img
+            src="https://www.iconpacks.net/icons/2/free-youtube-logo-icon-2431-thumb.png"
+            class="social-icon-img"
+          />
+        </a>
+        <a href="https://www.linkedin.com/in/challa-santhosh-9b450531a/">
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/174/174857.png"
+            class="social-icon-img"
+          />
+        </a>
+        <a href="https://github.com/challasanthosh-14">
+          <img
+            src="https://as2.ftcdn.net/jpg/02/50/30/59/1000_F_250305943_sDC6la1N1fDl3bLgfLxOkQwItIodsdMb.jpg"
+            class="social-icon-img"
+          />
+        </a>
       </div>
     </footer>
   </body>
 </html>
+
