--- a/pdf.html
+++ b/pdf.html
@@ -23,6 +23,13 @@
           width="200px"
           alt=""
       /></a>
+      <a href="JavaFD.pdf" id="mypdf">
+        <img
+          src="https://cdn-icons-png.flaticon.com/512/226/226777.png"
+          alt="Java"
+        />
+        Java
+      </a>
       
     </div>
   </body>
