--- a/pdf.html
+++ b/pdf.html
@@ -30,6 +30,13 @@
         />
         Java
       </a>
+      <a href="java interview.pdf" id="mypdf">
+        <img
+          src="https://cdn-icons-png.flaticon.com/512/226/226777.png"
+          alt="Java"
+        />
+        Java
+      </a>
       
     </div>
   </body>
