--- a/certifivations.html
+++ b/certifivations.html
@@ -19,7 +19,7 @@
         </div>
         <h2>Java Fullstack Development(TAP Academy)</h2>
         <div id="certicate">
-          <img src="JFD.jpg" alt="" height="600" width="900" />
+          <img src="JFD.png" alt="" height="600" width="900" />
         </div>
       </div>
     </div>
