--- a/pdf.html
+++ b/pdf.html
@@ -35,7 +35,7 @@
           src="https://cdn-icons-png.flaticon.com/512/226/226777.png"
           alt="Java"
         />
-        Java
+        Java Interview QA
       </a>
       
     </div>
