--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
       <div class="social-icons">
         <a href="https://www.instagram.com/sunny_vlgs/?__pwa=1">
           <img
-            src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/58/Instagram-Icon.png/1024px-Instagram-Icon.png"
+            src="https://www.pngarts.com/files/11/IG-Logo-Silhouette-Free-PNG-Image.png"
             class="social-icon-img"
           />
         </a>
         <a href="https://www.youtube.com/@aypkurrallu208">
           <img
-            src="https://www.iconpacks.net/icons/2/free-youtube-logo-icon-2431-thumb.png"
+            src="https://www.figma.com/community/resource/97c7d705-c136-472a-aebe-4c0b23f615df/thumbnail"
             class="social-icon-img"
           />
         </a>
@@ -87,7 +87,7 @@
         </a>
         <a href="https://github.com/challasanthosh-14">
           <img
-            src="https://as2.ftcdn.net/jpg/02/50/30/59/1000_F_250305943_sDC6la1N1fDl3bLgfLxOkQwItIodsdMb.jpg"
+            src="https://static.vecteezy.com/system/resources/previews/017/119/660/non_2x/github-logo-git-hub-icon-with-text-on-white-and-black-background-free-vector.jpg"
             class="social-icon-img"
           />
         </a>
