--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,22 @@
     <h1>Featured Projects</h1>
     <div class="project-page">
       <div class="project-card">
+
+        <div class="pr">
+          <a href="https://challasanthosh-14.github.io/portfolio/">
+            <img
+              src="https://i.ytimg.com/vi/TwYKwaEjJd4/maxresdefault.jpg"
+              alt=""
+              id="project-image"
+              class="project-box"
+            />
+            <div class="project-content">
+              <h2 id="project-heading">Portfolio</h2>
+              <p>"Show Case our skills"</p>
+            </div>
+          </a>
+        </div>
+        
         <div class="pr">
           <a href="">
             <img
