--- a/pdf.html
+++ b/pdf.html
@@ -37,7 +37,15 @@
         />
         Java Interview QA
       </a>
+       <a href="JAVA Revise.pdf" id="mypdf">
+        <img
+          src="https://cdn-icons-png.flaticon.com/512/226/226777.png"
+          alt="Java"
+        />
+        Java Interview QA
+      </a>
       
     </div>
   </body>
 </html>
+
