--- a/pdf.html
+++ b/pdf.html
@@ -42,10 +42,11 @@
           src="https://cdn-icons-png.flaticon.com/512/226/226777.png"
           alt="Java"
         />
-        Java Interview QA
+        Java Revise
       </a>
       
     </div>
   </body>
 </html>
+
 
