--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             user-friendly design and robust backend logic.
           </p>
           <a href="myATS.pdf" id="resume">View Resume</a>
+          <a href="contact.html" id="resume">Details</a>
         </div>
         <div class="home-right">
           <img src="portfolio.jpg" alt="Portfolio" id="main-image" />
@@ -51,16 +52,6 @@
         <a href="skills.html" id="scale"><button>Skills</button></a>
         <a href="softwaredownload.html" id="scale"><button>Software</button></a>
         <a href="pdf.html" id="scale"><button>PDFs</button></a>
-      </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section class="contact" id="contacts">
-      <h1 class="section-title">Contact</h1>
-      <div class="contact-info">
-        <p><strong>Name:</strong> C Santhosh</p>
-        <p><strong>Phone:</strong> +91 8072154062</p>
-        <p><strong>Email:</strong> challasanthosh14@gmail.com</p>
       </div>
     </section>
 
@@ -95,4 +86,5 @@
     </footer>
   </body>
 </html>
+
 
