--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             Boot, and MySQL. I build full-stack web applications with
             user-friendly design and robust backend logic.
           </p>
-          <a href="myATS.pdf" id="resume">View Resume</a>
+          <a href="resume1.pdf" id="resume">View Resume</a>
           <a href="contact.html" id="resume">Details</a>
         </div>
         <div class="home-right">
@@ -86,5 +86,6 @@
     </footer>
   </body>
 </html>
+
 
 
